--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<version>1.1.3</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-client</artifactId>
 			<version>3.0.4</version>
@@ -45,11 +50,6 @@
 		<dependency>
 			<groupId>com.customerservice</groupId>
 			<artifactId>customerservice-bean</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.customerservice</groupId>
-			<artifactId>customerservice-client</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
